--- a/styles.css
+++ b/styles.css
@@ -1,51 +1,291 @@
 /* Variable for scaling */
-:root{
+:root {
     --scalar: 250; /*A multiplier for dimensions*/
     --grid-gutter: 0.5px; /*Spacing between grid items */
 }
 header {
+    padding-left: 2vw;
     display: flex;
     height: 6vh;
-    position: sticky;
+    position: fixed;
     width: 100%;
     background-color: gray;
     top: 0;
+    font-family: Alumni Sans Pinstripe;
+    font-weight: 600;
+    align-items: center;
+}
+nav {
+    padding-left: 5vw;
+    justify-content: right;
 }
 grid-wrapper {
-  display: flex;
-  justify-content: center; /* Center the grid horizontally */  
+    justify-content: center; /* Center the grid horizontally */
+    margin-top: 500px;
+}
+nav button {
+    font-family:
+        Instrument Sans,
+        sans-serif;
+    border: none;
+    color: cornsilk;
+    height: 5vh;
+    padding-left: 32px;
+    padding-right: 32px;
+    text-align: center;
+    fill-opacity: 0;
+    font-size: medium;
+    margin: 4px 2px;
+    opacity: 0.6;
+    border-radius: 15px;
+    background: none;
+    transition: 0.3s;
+}
+nav button:hover {
+    opacity: 0.75;
+    background-color: darkgray;
+    cursor: pointer;
+}
+nav button.active {
+    border-color: cornsilk;
+    /*background-color: rgba(0, 0, 0, 0.20);
+    color: white;*/
+    text-decoration: underline;
+    text-underline-offset: 6px;
+}
+
+#body {
+    font-family:
+        Instrument Sans,
+        sans-serif;
+}
+.filter-container {
+    position: absolute;
+    top: 7vh;
+    left: 2vw;
+    background-color: #fff;
+    padding: 10px;
+    border-radius: 15px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+}
+.filter-container label {
+    display: block;
+    margin-bottom: 5px;
+    cursor: pointer; /* Indicate that it's clickable */
+    padding: 5px; /* Add some padding for better click area */
+    border-radius: 3px; /* Add rounded corners */
+}
+.filter-container label:hover {
+    background-color: #e0e0e0; /* Change background on hover */
+}
+.selected-filter {
+    background-color: cornsilk; /* Color for selected filters */
+}
+.filter-card {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    background-color: #fff;
+    border: 1px solid #ccc;
+    padding: 10px;
+    border-radius: 15px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    max-width: 200px;
+}
+
+.portfolio {
+    padding-top: 50px;
 }
 .grid-container {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, calc(0.7px * var(--scalar))); /* Main grid */
-  column-gap: calc(1 * var(--grid-gutter) * var(--scalar)); /* Space between the cells */
-  row-gap: calc(0.4 * var(--grid-gutter) * var(--scalar)); /* Space between the cells */
-  justify-content: center; /* Center the grid on the page */
-  justify-items: center; /* Center the grid on the page */
+    display: grid;
+    grid-template-columns: repeat(auto-fit, calc(0.7px * var(--scalar))); /* Main grid */
+    column-gap: calc(1 * var(--grid-gutter) * var(--scalar)); /* Space between the cells */
+    row-gap: calc(0.4 * var(--grid-gutter) * var(--scalar)); /* Space between the cells */
+    justify-content: center; /* Center the grid on the page */
+    justify-items: center; /* Center the grid on the page */
 }
 .grid-item {
-  width: calc(1px * var(--scalar));
-  height: calc(1.618px * var(--scalar));
-  background-color: rgba(255, 255, 255, 0.8);
-  border: 1px solid rgba(0, 0, 0, 0.8);
-  font-size: 30px;
-  text-align: center;
+    font-family: Alumni Sans Pinstripe;
+    width: calc(1px * var(--scalar));
+    height: calc(1.618px * var(--scalar));
+    background-color: rgba(203, 250, 207);
+    text-align: center;
+    align-content: center;
+    cursor: pointer;
+    /* Background settings */
+    background-size: cover;
+    background-position: center;
+    transition: 0.2s ease-in-out;
+    transition-delay: 0.1s;
 }
+.grid-item:hover {
+    transform: scale(1.05);
+    transition: 0.2s ease-in-out;
+    box-shadow: 0 0 15px darkgray;
+}
+.grid-item:hover .grid-overlay {
+    opacity: 1;
+    text-shadow: 0 0 15px gray;
+}
+.grid-overlay {
+    font-family:
+        Instrument Sans,
+        sans-serif;
+    font-size: x-large;
+    background-color: rgba(0, 0, 0, 0.25);
+    width: calc(1px * var(--scalar));
+    height: calc(1.618px * var(--scalar));
+    align-content: center;
+    color: white;
+    opacity: 0;
+    transition: 0.5s ease;
+}
+.lightbox {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.8);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000; /* Make sure the lightbox is above other content */
+}
+.lightbox-content {
+    font-family:
+        Instrument Sans,
+        sans-serif;
+    background-color: white;
+    padding: 20px;
+    border-radius: 8px;
+    max-width: 1000px;
+    width: 90vw; /* Responsive width */
+}
+#lightbox-title {
+    text-align: left;
+}
+#lightbox-timeline {
+    float: right;
+}
+.collaborators {
+    background-color: antiquewhite;
+    display: none;
+}
+/* Slideshow container */
+.slideshow-container {
+    position: relative;
+    max-width: 100%;
+    margin: auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+/* Hide the slides by default */
+.slide {
+    display: none;
+}
+
+/* Previous/next buttons */
+.prev,
+.next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    padding: 16px;
+    margin-top: -22px;
+    color: black;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+}
+
+.next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+}
+
+.prev {
+    left: 0;
+    border-radius: 3px 0 0 3px;
+}
+
+/* Description text */
+.text {
+    text-align: center;
+    color: #000;
+    padding: 8px 12px;
+    font-size: 14px;
+}
+
+/* Thumbnails */
+.row {
+    display: flex;
+    justify-content: center;
+    margin-top: 10px;
+}
+
+.column {
+    flex: 0 0 auto;
+    width: 80px;
+    margin: 5px;
+}
+
+.demo {
+    opacity: 0.6;
+    cursor: pointer;
+}
+
+.active,
+.demo:hover {
+    opacity: 1;
+}
+
+#image-description {
+    text-align: center;
+    margin-top: 10px;
+}
+
+.close {
+    cursor: pointer;
+    font-size: 28px;
+    position: absolute;
+    top: 10px;
+    right: 20px;
+}
+
 .section {
-    flex: 1; /* Allow main content to grow and fill available space */
-    height: 100vh;
-    padding-bottom: 2vh;
-    padding-top: 2vh;
+    padding-bottom: 7vh;
+    padding-top: 9vh;
     padding-left: 10vw; /* Padding around the grid */
     padding-right: 10vw; /* Padding around the grid */
 }
 footer {
-    position: sticky;
+    font-family:
+        Instrument Sans,
+        sans-serif;
+    font-size: medium;
+    align-items: center;
+    padding-left: 2vw;
+    padding-right: 2vw;
+    position: fixed;
     bottom: 0;
     width: 100%;
     height: 4vh;
     background-color: gray;
 }
+.footer-content {
+    padding-top: 0.3vh;
+    align-items: center;
+    display: flex;
+    justify-content: space-between;
+    width: 95%; /* Adjust as needed */
+}
+
 body {
     margin: 0;
     height: 100%;
