--- a/styles.css
+++ b/styles.css
@@ -4,9 +4,9 @@
     --grid-gutter: 0.5px; /*Spacing between grid items */
 }
 header {
-    padding-left: 2vw;
     display: flex;
-    height: 6vh;
+    justify-content: space-between;
+    height: 8ppx;
     position: fixed;
     width: 100%;
     background-color: gray;
@@ -16,9 +16,18 @@ header {
     align-items: center;
 }
 
+header, footer{
+    box-shadow: 0 0 1vh 1vh white;
+    z-index: 10; /* Keep header and footer drawn over anything else*/
+}
+
+header h1{
+    padding-left: 2vw;
+}
+
 nav {
-    padding-left: 5vw;
-    justify-content: right;
+    padding-right: 2vw;
+    display: flex;
 }
 
 grid-wrapper {
@@ -66,10 +75,11 @@ nav button.active {
 }
 
 .filter-container {
-    position: absolute;
+    z-index: 9; /* Render above grid items */
+    position: fixed;
     top: 7vh;
     left: 2vw;
-    background-color: rgba(255, 255, 255, 0.25);
+    background-color: rgba(255, 255, 255, 0.50);
     padding: 10px;
     border-radius: 15px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
@@ -77,6 +87,8 @@ nav button.active {
 
 .filter-container h3 {
     text-decoration: underline;
+    text-decoration-color: gray;
+    color: gray;
     font-size: 1.2em; /* Adjust size as needed */
     margin-top: 0;
     margin-bottom: 0; /* Space between header and checkboxes */
@@ -88,7 +100,7 @@ nav button.active {
     margin-bottom: 5px;
     cursor: pointer; /* Indicate that it's clickable */
     padding: 5px; /* Add some padding for better click area */
-    border-radius: 3px; /* Add rounded corners */
+    border-radius: 10px; /* Add rounded corners */
 }
 
 .filter-container label:hover {
@@ -96,7 +108,8 @@ nav button.active {
 }
 
 .selected-filter {
-    background-color: rgba(0, 0, 0, 0.25); /* Color for selected filters */
+    background-color: rgba(0, 0, 0, 0.05); /* Color for selected filters */
+    box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.25);
 }
 
 .portfolio {
@@ -123,8 +136,10 @@ nav button.active {
     /* Background settings */
     background-size: cover;
     background-position: center;
-    transition: 0.2s ease-in-out;
+    transition: 0.3s ease-in-out;
     transition-delay: 0.1s;
+    /* Filter Animations*/
+    opacity: 1;
 }
 
 .grid-item:hover {
@@ -162,7 +177,7 @@ nav button.active {
     display: flex;
     justify-content: center;
     align-items: center;
-    z-index: 1000; /* Make sure the lightbox is above other content */
+    z-index: 20; /* Make sure the lightbox is above other content */
 }
 
 .lightbox-content {
@@ -293,7 +308,7 @@ footer {
     position: fixed;
     bottom: 0;
     width: 100%;
-    height: 4vh;
+    height: 50px;
     background-color: gray;
 }
 
