--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,7 @@ header {
     width: 100%;
     background-color: gray;
     top: 0;
+    left: 0;
     font-family: Alumni Sans Pinstripe;
     font-weight: 600;
     align-items: center;
