--- a/styles.css
+++ b/styles.css
@@ -31,11 +31,16 @@ footer.with-shadow {
 }
 
 header h1 {
+        font-family:
+        Instrument Sans,
+        sans-serif;
     padding-left: 2vw;
     font-size: clamp(1.2rem, 4vw, 2rem); /* Dynamically adjust the header font size */
     white-space: nowrap; /* Prevents text from wrapping onto a new line */
     overflow: hidden; /* Ensures no overflow */
     text-overflow: ellipsis; /* Adds ellipsis (...) when text overflows */
+    transition: opacity 0.5s ease-in-out; /* Add transition for opacity */
+    opacity: 1; /* Default opacity */
 }
 
 nav {
